# score

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLOUD_API.md  DATA_MODEL.md  DEVICE_MANAGEMENT.md  Dockerfile  Makefile  agent-config.yaml  main.py  pyproject.toml  start.sh  test_cloud_api.py
examples/: schedule.yaml
src/game_clock/: main.py
src/score/: __init__.py  app.py  cli.py  cloud.py  cloud_api.py  config.py  db.py  device.py  event_pusher.py  log.py  models.py  pusher.py  scheduler.py  schema.py  seed.py  state.py
src/score/static/: admin.css
src/score/templates/: base.html
src/score/templates/app/: scoreboard.html
static/: style.css
templates/: index.html
tests/: test_cli.py  test_cloud_admin.py  test_event_pusher.py  test_goals.py  test_log.py  test_main.py  test_multi_game.py  test_pusher_errors.py  test_replay_determinism.py  test_schedule.py  test_scheduler.py  test_state.py
