[project]
name = "score"
version = "0.1.0"
description = "A game scoreboard app with FastAPI backend and optional PySide6 GUI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pywebview>=6.1",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pyinstaller",
]


