[project]
name = "score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Caron", email = "c_caron@apple.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "requests>=2.32.0",
]

[project.scripts]
score-app = "score.app:main"
score-push-events = "score.app:push_events"
score-cloud = "score.cloud:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
